--- a/ingest/logs.mdx
+++ b/ingest/logs.mdx
@@ -18,6 +18,7 @@ as anticipated.
 
 <Columns cols={1}>
   <Card
+    horizontal
     icon="hexagon-check"
     title="Verify log data"
     href="/ingest/logs/verify-logs"
