--- a/integrate.mdx
+++ b/integrate.mdx
@@ -20,6 +20,7 @@ Observability Platform supports these alerting integrations:
 
 <Columns cols={1}>
   <Card
+    horizontal
     icon="slack"
     title="Slack"
     href="/investigate/alerts/notifications/slack"
@@ -32,6 +33,7 @@ Observability Platform supports these alerting integrations:
 
 <Columns cols={1}>
   <Card
+    horizontal
     icon="plug"
     title="MCP server"
     href="/integrate/mcp-server"
@@ -51,6 +53,7 @@ Observability Platform supports these metrics integrations:
 
 <Columns cols={2} rowGroup="2">
   <Card
+    horizontal
     icon="aws"
     title="AWS Cloudwatch metrics"
     href="/ingest/metrics-traces/aws-cloudwatch-metric-stream"
@@ -58,6 +61,7 @@ Observability Platform supports these metrics integrations:
   <p>Configure AWS to stream metrics to Observability Platform through CloudWatch Metrics Streams.</p>
   </Card>
   <Card
+    horizontal
     icon="microsoft"
     title="Azure metrics"
     href="/ingest/metrics-traces/azure"
@@ -65,6 +69,7 @@ Observability Platform supports these metrics integrations:
   <p>Connect Observability Platform with Azure Monitor to ingest metrics.</p>
   </Card>
   <Card
+    horizontal
     icon="google"
     title="Google Cloud metrics"
     href="/ingest/metrics-traces/gcp"
@@ -72,6 +77,7 @@ Observability Platform supports these metrics integrations:
   <p>Connect Observability Platform with Google Cloud to ingest metrics from Google Cloud projects.</p>
   </Card>
   <Card
+    horizontal
     icon="telescope"
     title="OpenTelemetry"
     href="/ingest/metrics-traces/otel"
@@ -98,6 +104,7 @@ Observability Platform supports these trace integrations:
 
 <Columns cols={1}>
   <Card
+    horizontal
     icon="telescope"
     title="OpenTelemetry"
     href="/ingest/metrics-traces/otel"
