--- a/overview/types/change-events.mdx
+++ b/overview/types/change-events.mdx
@@ -17,7 +17,7 @@ events within Changes Explorer, and as change events on dashboards, traces, and
 services, and query results for monitors.
 
 <Columns cols={1}>
-  <Card icon="paper-plane"
+  <Card horizontal icon="paper-plane"
     title="Ingest data"
     titleBackgroundColor="#ff9d1c"
     titleTextColor="#FFFFFF"
@@ -32,7 +32,7 @@ identify changes that matter when you're trying to understand the root cause of 
 issue.
 
 <Columns cols={1}>
-  <Card icon="magnifying-glass-plus"
+  <Card horizontal icon="magnifying-glass-plus"
     title="Filter data"
     titleBackgroundColor="#ff9d1c"
     titleTextColor="#FFFFFF"
@@ -47,7 +47,7 @@ Platform to provide additional context that helps correlate events with system a
 service anomalies, allowing for quicker identification of incident cause.
 
 <Columns cols={1}>
-  <Card icon="display"
+  <Card horizontal icon="display"
     title="Observe data"
     titleBackgroundColor="#ff9d1c"
     titleTextColor="#FFFFFF"
