--- a/overview/types/metrics.mdx
+++ b/overview/types/metrics.mdx
@@ -25,7 +25,7 @@ with the Chronosphere Collector, and
 OpenTelemetry Collector.
 
 <Columns cols={1}>
-  <Card icon="paper-plane"
+  <Card horizontal icon="paper-plane"
     title="Ingest data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
@@ -42,7 +42,7 @@ interested in, and then apply functions to them. You can also learn about writin
 calculations within queries.
 
 <Columns cols={1}>
-  <Card icon="magnifying-glass-plus"
+  <Card horizontal icon="magnifying-glass-plus"
     title="Query data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
@@ -59,7 +59,7 @@ specified in a monitor query, and receive notifications when the query matches
 specified logs.
 
 <Columns cols={1}>
-  <Card icon="display"
+  <Card horizontal icon="display"
     title="Observe data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
@@ -73,7 +73,7 @@ Analyze both your metric data and queries to gain insights, understand the value
 your data semantics, and highlight changes and their impacts.
 
 <Columns cols={1}>
-  <Card icon="chart-bar"
+  <Card horizontal icon="chart-bar"
     title="Analyze data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
@@ -88,7 +88,7 @@ your system over time. Identify and evaluate data, and then reshape the overall
 dataset to eliminate waste, unnecessary noise, and cost.
 
 <Columns cols={1}>
-  <Card icon="shapes"
+  <Card horizontal icon="shapes"
     title="Control data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
