--- a/overview/types/traces.mdx
+++ b/overview/types/traces.mdx
@@ -19,7 +19,7 @@ OpenTelemetry Collector is configuring [head sampling](/control/sampling/head-sa
 which is a powerful control mechanism for managing your tracing costs.
 
 <Columns cols={1}>
-  <Card icon="paper-plane"
+  <Card horizontal icon="paper-plane"
     title="Ingest data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -35,7 +35,7 @@ help identify, triage, and understand the root cause of problems. See the
 capabilities that Trace Explorer provides.
 
 <Columns cols={1}>
-  <Card icon="magnifying-glass-plus"
+  <Card horizontal icon="magnifying-glass-plus"
     title="Query data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -52,7 +52,7 @@ specified in a monitor query, and receive notifications when the query matches
 specified logs.
 
 <Columns cols={1}>
-  <Card icon="display"
+  <Card horizontal icon="display"
     title="Observe data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -66,7 +66,7 @@ Create links to related data from other parts of Observability Platform, such as
 linking to logs from traces and linking to traces from dashboards.
 
 <Columns cols={1}>
-  <Card icon="link"
+  <Card horizontal icon="link"
     title="Create links"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -82,7 +82,7 @@ semantics, and highlight changes and their impacts. Use
 to identify issues behind suspicious trends.
 
 <Columns cols={1}>
-  <Card icon="chart-bar"
+  <Card horizontal icon="chart-bar"
     title="Analyze data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -98,7 +98,7 @@ data, and then sample the overall dataset to eliminate waste, unnecessary noise,
 cost.
 
 <Columns cols={1}>
-  <Card icon="shapes"
+  <Card horizontal icon="shapes"
     title="Control data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
