--- a/pipeline-data.mdx
+++ b/pipeline-data.mdx
@@ -78,12 +78,12 @@ that transform the data passing through your pipeline.
 {/* vale Chronosphere.SentenceLengthLong = NO */}
 
 <Columns cols={1}>
-  <Card icon="dharmachakra" title="Automated Kubernetes logging" href="/pipeline-data/automated-logging" />
-  <Card icon="pipe" title="Create, modify, or delete pipelines" href="/pipeline-data/create-modify" />
-  <Card icon="file-code" title="Parsers" href="/pipeline-data/parsers" />
-  <Card icon="route" title="Plugins" href="/pipeline-data/plugins" />
-  <Card icon="filters" title="Processing rules" href="pipeline-data/processing-rules" />
-  <Card icon="bandage" title="Troubleshoot a pipeline" href="/pipeline-data/troubleshoot" />
+  <Card horizontal icon="dharmachakra" title="Automated Kubernetes logging" href="/pipeline-data/automated-logging" />
+  <Card horizontal icon="pipe" title="Create, modify, or delete pipelines" href="/pipeline-data/create-modify" />
+  <Card horizontal icon="file-code" title="Parsers" href="/pipeline-data/parsers" />
+  <Card horizontal icon="route" title="Plugins" href="/pipeline-data/plugins" />
+  <Card horizontal icon="filters" title="Processing rules" href="pipeline-data/processing-rules" />
+  <Card horizontal icon="bandage" title="Troubleshoot a pipeline" href="/pipeline-data/troubleshoot" />
 </Columns>
 
 {/* vale Chronosphere.SentenceLengthLong = YES */}
