--- a/tooling/api-info.mdx
+++ b/tooling/api-info.mdx
@@ -90,7 +90,7 @@ curl -H "Authorization: Bearer ${CHRONOSPHERE_API_TOKEN}" "https://${CHRONOSPHER
 For a full list of Chronosphere API endpoints, see:
 
 <Columns cols={1}>
-  <Card icon="cards" title="Config endpoints - Create and manage Observability Platform resources" href="/tooling/api-info/definition" />
-  <Card icon="book-pen" title="Data endpoints - Read and write data to Observability Platform" href="/tooling/api-info/data_definition" />
-  <Card icon="check" title="State endpoints - Access the runtime state of Observability Platform" href="/tooling/api-info/state_definition" />
+  <Card horizontal icon="cards" title="Config endpoints - Create and manage Observability Platform resources" href="/tooling/api-info/definition" />
+  <Card horizontal icon="book-pen" title="Data endpoints - Read and write data to Observability Platform" href="/tooling/api-info/data_definition" />
+  <Card horizontal icon="check" title="State endpoints - Access the runtime state of Observability Platform" href="/tooling/api-info/state_definition" />
 </Columns>
