--- a/tooling/infrastructure/pulumi.mdx
+++ b/tooling/infrastructure/pulumi.mdx
@@ -43,12 +43,12 @@ preferred language.
 {/* markdownlint-disable MD013 */}
 
 <Columns cols={2} rowGroup="2">
-  <Card icon="golang" title="Go"
+  <Card horizontal icon="golang" title="Go"
   href="https://pkg.go.dev/github.com/chronosphereio/pulumi-chronosphere/sdk" />
-  <Card icon="js" title="JavaScript"
+  <Card horizontal icon="js" title="JavaScript"
   href="https://www.npmjs.com/package/@pulumi-chronosphere/pulumi-chronosphere" />
-  <Card icon="c" title=".NET" href="https://www.nuget.org/packages/Chronosphere.Pulumi.Chronosphere" />
-  <Card icon="python" title="Python" href="https://pypi.org/project/pulumi-chronosphere/" />
+  <Card horizontal icon="c" title=".NET" href="https://www.nuget.org/packages/Chronosphere.Pulumi.Chronosphere" />
+  <Card horizontal icon="python" title="Python" href="https://pypi.org/project/pulumi-chronosphere/" />
 </Columns>
 
 {/* markdownlint-enable MD013 */}
