--- a/overview/types/logs.mdx
+++ b/overview/types/logs.mdx
@@ -17,7 +17,7 @@ Ingest data from any of the supported sources. After ingesting log data,
 as anticipated.
 
 <Columns cols={1}>
-  <Card icon="paper-plane"
+  <Card horizontal icon="paper-plane"
     title="Ingest data"
     titleBackgroundColor="#705DA0"
     titleTextColor="#FFFFFF"
@@ -33,7 +33,7 @@ organization. You can then use [shaping tools](/control/consumption/shape-logs) 
 Observability Platform to transform, reshape, retain, or exclude data.
 
 <Columns cols={1}>
-  <Card icon="shapes"
+  <Card horizontal icon="shapes"
     title="Control data"
     titleBackgroundColor="#705DA0"
     titleTextColor="#FFFFFF"
@@ -49,7 +49,7 @@ important log data. Use the supported functions and
 you need.
 
 <Columns cols={1}>
-  <Card icon="magnifying-glass-plus"
+  <Card horizontal icon="magnifying-glass-plus"
     title="Query data"
     titleBackgroundColor="#705DA0"
     titleTextColor="#FFFFFF"
@@ -66,7 +66,7 @@ specified in a monitor query, and receive notifications when the query matches
 specified logs.
 
 <Columns cols={1}>
-  <Card icon="display"
+  <Card horizontal icon="display"
     title="Observe data"
     titleBackgroundColor="#705DA0"
     titleTextColor="#FFFFFF"
@@ -80,7 +80,7 @@ Create links to log data from other parts of Observability Platform, such as lin
 to logs from traces and linking to logs from dashboards.
 
 <Columns cols={1}>
-  <Card icon="link"
+  <Card horizontal icon="link"
     title="Create links"
     titleBackgroundColor="#705DA0"
     titleTextColor="#FFFFFF"
@@ -95,7 +95,7 @@ utility of data patterns and where they're used, and identify opportunities for
 reducing, augmenting, or routing log data to lower costs.
 
 <Columns cols={1}>
-  <Card icon="chart-bar"
+  <Card horizontal icon="chart-bar"
     title="Analyze data"
     titleBackgroundColor="#705DA0"
     titleTextColor="#FFFFFF"
