--- a/pipeline-administer.mdx
+++ b/pipeline-administer.mdx
@@ -13,8 +13,8 @@ You can manage different aspects of Chronosphere Telemetry Pipeline.
 {/* markdownlint-disable MD013 */}
 
 <Columns cols={1}>
-  <Card icon="magnifying-glass" title="Monitoring" href="/pipeline-administer/monitoring" />
-  <Card icon="users" title="Team" href="/pipeline-administer/team" />
+  <Card horizontal icon="magnifying-glass" title="Monitoring" href="/pipeline-administer/monitoring" />
+  <Card horizontal icon="users" title="Team" href="/pipeline-administer/team" />
 </Columns>
 
 {/* markdownlint-enable MD013 */}
