--- a/pipeline-configure/kubernetes.mdx
+++ b/pipeline-configure/kubernetes.mdx
@@ -14,13 +14,13 @@ settings.
 {/* markdownlint-disable MD013 */}
 {/* vale Chronosphere.SentenceLengthLong = NO */}
 <Columns cols={1}>
-  <Card icon="brackets-curly" title="Annotations" href="/pipeline-configure/kubernetes/annotations" />
-  <Card icon="brackets-curly" title="Namespaces" href="/pipeline-configure/kubernetes/namespaces" />
-  <Card icon="train" title="Pods and containers" href="/pipeline-configure/kubernetes/pods-containers" />
-  <Card icon="tag" title="Resource labels" href="/pipeline-configure/kubernetes/resource-labels" />
-  <Card icon="squares-plus" title="Sidecars" href="/pipeline-configure/kubernetes/sidecars" />
-  <Card icon="bullseye" title="Tolerations" href="/pipeline-configure/kubernetes/tolerations" />
-  <Card icon="database-clock" title="Workloads" href="/pipeline-configure/kubernetes/workloads" />
+  <Card horizontal icon="brackets-curly" title="Annotations" href="/pipeline-configure/kubernetes/annotations" />
+  <Card horizontal icon="brackets-curly" title="Namespaces" href="/pipeline-configure/kubernetes/namespaces" />
+  <Card horizontal icon="train" title="Pods and containers" href="/pipeline-configure/kubernetes/pods-containers" />
+  <Card horizontal icon="tag" title="Resource labels" href="/pipeline-configure/kubernetes/resource-labels" />
+  <Card horizontal icon="squares-plus" title="Sidecars" href="/pipeline-configure/kubernetes/sidecars" />
+  <Card horizontal icon="bullseye" title="Tolerations" href="/pipeline-configure/kubernetes/tolerations" />
+  <Card horizontal icon="database-clock" title="Workloads" href="/pipeline-configure/kubernetes/workloads" />
 </Columns>
 {/* vale Chronosphere.SentenceLengthLong = YES */}
 {/* markdownlint-enable MD013 */}
