--- a/pipeline-data/plugins/source-plugins.mdx
+++ b/pipeline-data/plugins/source-plugins.mdx
@@ -18,47 +18,47 @@ of telemetry sources. Different source plugins support different data types,
 including logs, metrics, and traces.
 
 <Columns cols={2} rowGroup="2">
-  <Card icon="plug" title="Absolute" href="/pipeline-data/plugins/source-plugins/absolute"/>
-  <Card icon="plug" title="Amazon Kinesis Firehose" href="/pipeline-data/plugins/source-plugins/amazon-kinesis-firehose"/>
-  <Card icon="plug" title="Amazon Kinesis Stream Input" href="/pipeline-data/plugins/source-plugins/amazon-kinesis-stream"/>
-  <Card icon="plug" title="Azure Event Grid" href="/pipeline-data/plugins/source-plugins/azure-event-grid"/>
-  <Card icon="plug" title="Azure Event Hubs" href="/pipeline-data/plugins/source-plugins/azure-event-hub"/>
-  <Card icon="plug" title="Bash Command" href="/pipeline-data/plugins/source-plugins/bash"/>
-  <Card icon="plug" title="Cloudflare LogPush" href="/pipeline-data/plugins/source-plugins/cloudflare"/>
-  <Card icon="plug" title="Confluent Cloud" href="/pipeline-data/plugins/source-plugins/confluent-cloud"/>
-  <Card icon="plug" title="Datadog Agent" href="/pipeline-data/plugins/source-plugins/datadog-agent"/>
-  <Card icon="plug" title="Datagen" href="/pipeline-data/plugins/source-plugins/datagen"/>
-  <Card icon="plug" title="Dummy logs, metrics, and traces" href="/pipeline-data/plugins/source-plugins/dummy"/>
-  <Card icon="plug" title="Dummy HTTP" href="/pipeline-data/plugins/source-plugins/dummy-http"/>
-  <Card icon="plug" title="Elasticsearch HTTP" href="/pipeline-data/plugins/source-plugins/elasticsearch-http"/>
-  <Card icon="plug" title="Fluent Bit" href="/pipeline-data/plugins/source-plugins/fluent-bit"/>
-  <Card icon="plug" title="Fluentd" href="/pipeline-data/plugins/source-plugins/fluentd"/>
-  <Card icon="plug" title="Forward" href="/pipeline-data/plugins/source-plugins/forward"/>
-  <Card icon="plug" title="Google Cloud PubSub Input" href="/pipeline-data/plugins/source-plugins/google-cloud-pubsub"/>
-  <Card icon="plug" title="Google Workspace Audit Logs" href="/pipeline-data/plugins/source-plugins/google-workspace-audit"/>
-  <Card icon="plug" title="HTTP" href="/pipeline-data/plugins/source-plugins/http"/>
-  <Card icon="plug" title="HTTP API collector" href="/pipeline-data/plugins/source-plugins/http-api-collector"/>
-  <Card icon="plug" title="Kafka" href="/pipeline-data/plugins/source-plugins/kafka"/>
-  <Card icon="plug" title="Kubernetes Events " href="/pipeline-data/plugins/source-plugins/kubernetes"/>
-  <Card icon="plug" title="Mandiant ASM" href="/pipeline-data/plugins/source-plugins/mandiant-asm"/>
-  <Card icon="plug" title="Microsoft Intune - Audit event" href="/pipeline-data/plugins/source-plugins/intune"/>
-  <Card icon="plug" title="Mock Data" href="/pipeline-data/plugins/source-plugins/mock-data"/>
-  <Card icon="plug" title="Okta System Logs Collector" href="/pipeline-data/plugins/source-plugins/okta"/>
-  <Card icon="plug" title="OpenTelemetry" href="/pipeline-data/plugins/source-plugins/opentelemetry"/>
-  <Card icon="plug" title="Prometheus Remote Write" href="/pipeline-data/plugins/source-plugins/prometheus-remote"/>
-  <Card icon="plug" title="Prometheus Scrape" href="/pipeline-data/plugins/source-plugins/prometheus-scrape"/>
-  <Card icon="plug" title="S3 Input (One Time)" href="/pipeline-data/plugins/source-plugins/amazon-s3"/>
-  <Card icon="plug" title="S3 Input (SQS)" href="/pipeline-data/plugins/source-plugins/s3-sqs"/>
-  <Card icon="plug" title="Signal Sciences" href="/pipeline-data/plugins/source-plugins/signal-sciences"/>
-  <Card icon="plug" title="Slack" href="/pipeline-data/plugins/source-plugins/slack"/>
-  <Card icon="plug" title="Splunk HEC" href="/pipeline-data/plugins/source-plugins/splunk-hec"/>
-  <Card icon="plug" title="Splunk UF" href="/pipeline-data/plugins/source-plugins/splunk-uf"/>
-  <Card icon="plug" title="SQL DB Input" href="/pipeline-data/plugins/source-plugins/sqldb"/>
-  <Card icon="plug" title="Syslog" href="/pipeline-data/plugins/source-plugins/syslog"/>
-  <Card icon="plug" title="TCP" href="/pipeline-data/plugins/source-plugins/tcp"/>
-  <Card icon="plug" title="Telegraf" href="/pipeline-data/plugins/source-plugins/telegraf"/>
-  <Card icon="plug" title="Vectra M365 - Incident Detection" href="/pipeline-data/plugins/source-plugins/vectram365"/>
-  <Card icon="plug" title="Vercel Logs" href="/pipeline-data/plugins/source-plugins/vercel"/>
+  <Card horizontal icon="plug" title="Absolute" href="/pipeline-data/plugins/source-plugins/absolute"/>
+  <Card horizontal icon="plug" title="Amazon Kinesis Firehose" href="/pipeline-data/plugins/source-plugins/amazon-kinesis-firehose"/>
+  <Card horizontal icon="plug" title="Amazon Kinesis Stream Input" href="/pipeline-data/plugins/source-plugins/amazon-kinesis-stream"/>
+  <Card horizontal icon="plug" title="Azure Event Grid" href="/pipeline-data/plugins/source-plugins/azure-event-grid"/>
+  <Card horizontal icon="plug" title="Azure Event Hubs" href="/pipeline-data/plugins/source-plugins/azure-event-hub"/>
+  <Card horizontal icon="plug" title="Bash Command" href="/pipeline-data/plugins/source-plugins/bash"/>
+  <Card horizontal icon="plug" title="Cloudflare LogPush" href="/pipeline-data/plugins/source-plugins/cloudflare"/>
+  <Card horizontal icon="plug" title="Confluent Cloud" href="/pipeline-data/plugins/source-plugins/confluent-cloud"/>
+  <Card horizontal icon="plug" title="Datadog Agent" href="/pipeline-data/plugins/source-plugins/datadog-agent"/>
+  <Card horizontal icon="plug" title="Datagen" href="/pipeline-data/plugins/source-plugins/datagen"/>
+  <Card horizontal icon="plug" title="Dummy logs, metrics, and traces" href="/pipeline-data/plugins/source-plugins/dummy"/>
+  <Card horizontal icon="plug" title="Dummy HTTP" href="/pipeline-data/plugins/source-plugins/dummy-http"/>
+  <Card horizontal icon="plug" title="Elasticsearch HTTP" href="/pipeline-data/plugins/source-plugins/elasticsearch-http"/>
+  <Card horizontal icon="plug" title="Fluent Bit" href="/pipeline-data/plugins/source-plugins/fluent-bit"/>
+  <Card horizontal icon="plug" title="Fluentd" href="/pipeline-data/plugins/source-plugins/fluentd"/>
+  <Card horizontal icon="plug" title="Forward" href="/pipeline-data/plugins/source-plugins/forward"/>
+  <Card horizontal icon="plug" title="Google Cloud PubSub Input" href="/pipeline-data/plugins/source-plugins/google-cloud-pubsub"/>
+  <Card horizontal icon="plug" title="Google Workspace Audit Logs" href="/pipeline-data/plugins/source-plugins/google-workspace-audit"/>
+  <Card horizontal icon="plug" title="HTTP" href="/pipeline-data/plugins/source-plugins/http"/>
+  <Card horizontal icon="plug" title="HTTP API collector" href="/pipeline-data/plugins/source-plugins/http-api-collector"/>
+  <Card horizontal icon="plug" title="Kafka" href="/pipeline-data/plugins/source-plugins/kafka"/>
+  <Card horizontal icon="plug" title="Kubernetes Events " href="/pipeline-data/plugins/source-plugins/kubernetes"/>
+  <Card horizontal icon="plug" title="Mandiant ASM" href="/pipeline-data/plugins/source-plugins/mandiant-asm"/>
+  <Card horizontal icon="plug" title="Microsoft Intune - Audit event" href="/pipeline-data/plugins/source-plugins/intune"/>
+  <Card horizontal icon="plug" title="Mock Data" href="/pipeline-data/plugins/source-plugins/mock-data"/>
+  <Card horizontal icon="plug" title="Okta System Logs Collector" href="/pipeline-data/plugins/source-plugins/okta"/>
+  <Card horizontal icon="plug" title="OpenTelemetry" href="/pipeline-data/plugins/source-plugins/opentelemetry"/>
+  <Card horizontal icon="plug" title="Prometheus Remote Write" href="/pipeline-data/plugins/source-plugins/prometheus-remote"/>
+  <Card horizontal icon="plug" title="Prometheus Scrape" href="/pipeline-data/plugins/source-plugins/prometheus-scrape"/>
+  <Card horizontal icon="plug" title="S3 Input (One Time)" href="/pipeline-data/plugins/source-plugins/amazon-s3"/>
+  <Card horizontal icon="plug" title="S3 Input (SQS)" href="/pipeline-data/plugins/source-plugins/s3-sqs"/>
+  <Card horizontal icon="plug" title="Signal Sciences" href="/pipeline-data/plugins/source-plugins/signal-sciences"/>
+  <Card horizontal icon="plug" title="Slack" href="/pipeline-data/plugins/source-plugins/slack"/>
+  <Card horizontal icon="plug" title="Splunk HEC" href="/pipeline-data/plugins/source-plugins/splunk-hec"/>
+  <Card horizontal icon="plug" title="Splunk UF" href="/pipeline-data/plugins/source-plugins/splunk-uf"/>
+  <Card horizontal icon="plug" title="SQL DB Input" href="/pipeline-data/plugins/source-plugins/sqldb"/>
+  <Card horizontal icon="plug" title="Syslog" href="/pipeline-data/plugins/source-plugins/syslog"/>
+  <Card horizontal icon="plug" title="TCP" href="/pipeline-data/plugins/source-plugins/tcp"/>
+  <Card horizontal icon="plug" title="Telegraf" href="/pipeline-data/plugins/source-plugins/telegraf"/>
+  <Card horizontal icon="plug" title="Vectra M365 - Incident Detection" href="/pipeline-data/plugins/source-plugins/vectram365"/>
+  <Card horizontal icon="plug" title="Vercel Logs" href="/pipeline-data/plugins/source-plugins/vercel"/>
 </Columns>
 
 ## Push-based and pull-based source plugins
