--- a/snippets/_partials/change-events-list.mdx
+++ b/snippets/_partials/change-events-list.mdx
@@ -1,6 +1,7 @@
 
 <Columns cols={2} rowGroup="2">
   <Card
+    horizontal
     icon="aws"
     title="Amazon EventBridge"
     href="/ingest/third-party/aws-eventbridge"
@@ -8,6 +9,7 @@
   <p>Send Amazon EventBridge events to Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="cube"
     title="Buildkite"
     href="/ingest/third-party/buildkite"
@@ -15,6 +17,7 @@
   <p>Send Buildkite events to Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="circle-nodes"
     title="CircleCI"
     href="/ingest/third-party/circleci"
@@ -22,6 +25,7 @@
   <p>Send CircleCI events to Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="github"
     title="GitHub"
     href="/ingest/third-party/github"
@@ -29,6 +33,7 @@
   <p>Send GitHub events to Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="gitlab"
     title="GitLab"
     href="/ingest/third-party/gitlab"
@@ -36,6 +41,7 @@
   <p>Send GitLab events to Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="google"
     title="Google Cloud Personalized Service Health"
     href="/ingest/third-party/google-cloud"
@@ -43,6 +49,7 @@
   <p>Send Google Cloud Personalized Service Health events to Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="diamond"
     title="Harness"
     href="/ingest/third-party/harness"
@@ -50,6 +57,7 @@
   <p>Send Harness events to Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="angles-right"
     title="LaunchDarkly"
     href="/ingest/third-party/launchdarkly"
