--- a/snippets/_partials/log-ingest.mdx
+++ b/snippets/_partials/log-ingest.mdx
@@ -1,6 +1,7 @@
 
 <Columns cols={2} rowGroup="2">
   <Card
+    horizontal
     icon="google"
     title="Google Cloud Platform"
     href="/ingest/logs/gcp-logs"
@@ -8,6 +9,7 @@
   <p>Use the Google Cloud Pub/Sub to route logs from Google Cloud Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="plug"
     title="HTTP endpoint"
     href="/ingest/logs/http-logs"
@@ -15,6 +17,7 @@
   <p>Use the logging HTTP endpoint to send logs directly to Chronosphere.</p>
   </Card>
   <Card
+    horizontal
     icon="file-export"
     title="Logstash"
     href="/ingest/logs/logstash-logs"
@@ -22,6 +25,7 @@
   <p>Configure an HTTP output plugin to route logs from Logstash.</p>
   </Card>
   <Card
+    horizontal
     icon="telescope"
     title="OpenTelemetry"
     href="/ingest/logs/otel-logs"
@@ -29,6 +33,7 @@
   <p>Use the OpenTelemetry protocol (OTLP) HTTP endpoint to route logs from OpenTelemetry.</p>
   </Card>
   <Card
+    horizontal
     icon="pipe"
     title="Telemetry Pipeline"
     href="/ingest/logs/pipeline-logs"
