--- a/snippets/_partials/notifier-list.mdx
+++ b/snippets/_partials/notifier-list.mdx
@@ -1,6 +1,7 @@
 
 <Columns cols={2} rowGroup="2">
   <Card
+    horizontal
     icon="trash"
     title="Discard"
     href="/investigate/alerts/notifications/notifiers/discard"
@@ -8,6 +9,7 @@
   <p>Create a notifier to discard all notifications.</p>
   </Card>
   <Card
+    horizontal
     icon="envelope"
     title="Email"
     href="/investigate/alerts/notifications/notifiers/email"
@@ -15,6 +17,7 @@
   <p>Create an email notifier to send monitor alerts to a specific email address.</p>
   </Card>
   <Card
+    horizontal
     icon="fire"
     title="incident.io"
     href="/investigate/alerts/notifications/notifiers/incident"
@@ -22,6 +25,7 @@
   <p>Configure an alert source in incident.io and then create a webhook notifier in Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="atlassian"
     title="OpsGenie"
     href="/investigate/alerts/notifications/notifiers/opsgenie"
@@ -29,6 +33,7 @@
   <p>Create a notifier in OpsGenie.</p>
   </Card>
   <Card
+    horizontal
     icon="circle-p"
     title="PagerDuty"
     href="/investigate/alerts/notifications/notifiers/pagerduty"
@@ -36,6 +41,7 @@
   <p>Create a service in PagerDuty and then create the notifier in Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="slack"
     title="Slack"
     href="/investigate/alerts/notifications/notifiers/slack"
@@ -43,6 +49,7 @@
   <p>Generate an incoming webhook in Slack and then create a Slack notifier in  Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="leaf"
     title="VictorOps"
     href="/investigate/alerts/notifications/notifiers/victorops"
@@ -50,6 +57,7 @@
   <p>Create an API key in VictorOps and then create a VictorOps notifier in Observability Platform.</p>
   </Card>
   <Card
+    horizontal
     icon="webhook"
     title="Webhook"
     href="/investigate/alerts/notifications/notifiers/webhook"
